test/spec_vectors/align64/ok/module_108.wat
(module (memory i64 1) (func i64.const 0 i32.load offset=18446744073709551615 drop))