test/spec_vectors/align64/fail/module_95.wat
(module (memory i64 0) (func (drop (f32.load align=8 (i64.const 0)))))